bindings/csharp/RevaultNative.cs

    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_agent_put(IntPtr id, nuint id_len, IntPtr key, nuint key_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_agent_forget(IntPtr id, nuint id_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_agent_stop();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_agent_start();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_agent_list();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_agent_sleep_support();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_platform_status();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_platform_set_scope(IntPtr scope, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_platform_forget_password();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_platform_put_password(IntPtr password, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_platform_enable();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_platform_disable();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_platform_disabled();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_platform_get_password();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_default_directory();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_default_path();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_agent_log_path();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_agent_log_destination();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_agent_get_vault_unlock_key(IntPtr vault_id, nuint vault_id_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_agent_put_vault_unlock_key(IntPtr vault_id, nuint vault_id_len, IntPtr key, nuint key_len, ulong ttl_seconds);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_agent_forget_vault_unlock_key(IntPtr vault_id, nuint vault_id_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_agent_get_owner_signing_key(IntPtr vault_id, nuint vault_len, IntPtr profile, nuint profile_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_agent_put_owner_signing_key(IntPtr vault_id, nuint vault_len, IntPtr profile, nuint profile_len, IntPtr key, ulong ttl_seconds);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_agent_forget_owner_signing_key(IntPtr vault_id, nuint vault_len, IntPtr profile, nuint profile_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_agent_begin_activity(IntPtr kind, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void vault_agent_end_activity(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_local();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_create_lockbox_password(IntPtr vault, IntPtr path, nuint path_len, IntPtr password, nuint password_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_open_lockbox_password(IntPtr vault, IntPtr path, nuint path_len, IntPtr password, nuint password_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_create_lockbox_content_key(IntPtr vault, IntPtr path, nuint path_len, IntPtr content_key, nuint key_len, IntPtr signing_key);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_create_lockbox_contact(IntPtr vault, IntPtr path, nuint path_len, IntPtr contact, IntPtr name, nuint name_len, IntPtr signing_key);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_open_lockbox_content_key(IntPtr vault, IntPtr path, nuint path_len, IntPtr content_key, nuint key_len, IntPtr signing_key);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_cache_lockbox_password(IntPtr vault, IntPtr path, nuint path_len, IntPtr password, nuint password_len, ulong ttl_seconds);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_close_lockbox(IntPtr vault, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_close_all(IntPtr vault);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void vault_free(IntPtr vault);
}
